# rust_lab

./: Cargo.toml  README.md
src/: factorial.rs  fibonacci.rs  guessing_game.rs  l4and5struct.rs  l6collection.rs  lib.rs  palindrome.rs
src/leet/: leet1.rs  leet2.rs  leet3.rs  mod.rs
tests/: l6collection.rs  leet.rs
