[package]
name = "rust_lab"
description = "Rust solutions for learning"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "main-exe"
path = "bin/main.rs"

[workspace]
members = ["packages/leetcode", "packages/tasks"]

[dependencies]
tasks = { path = "packages/tasks" }
rand = "0.9.0"
clap = { version = "4.5.35", features = ["derive"] }


[profile.dev]
opt-level = 0

# cargo run --release
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
